Modified users controller to handle new attributes and edited the tests
