# swagger/v1/swagger.yaml
@@ -68,6 +68,7 @@ paths:
                 image:
                   type: string
                   format: binary
+                  example: ''
               required:
               - name
               - location
@@ -218,19 +219,15 @@ paths:
                 example_response:
                   value:
                   - id: 1
-                    check_in: '2024-10-01'
-                    check_out: '2024-10-05'
                     room_id: 10
                     user_id: 2
-                    created_at: '2024-09-20T10:00:00.000Z'
-                    updated_at: '2024-09-20T10:00:00.000Z'
+                    check_in: '2024-10-01'
+                    check_out: '2024-10-05'
                   - id: 2
-                    check_in: '2024-09-25'
-                    check_out: '2024-09-30'
                     room_id: 12
                     user_id: 3
-                    created_at: '2024-09-20T09:30:00.000Z'
-                    updated_at: '2024-09-20T09:30:00.000Z'
+                    check_in: '2024-09-25'
+                    check_out: '2024-09-30'
         '401':
           description: unauthorized
   "/api/v1/hotels/{hotel_id}/rooms/{room_id}/reservations":
@@ -318,11 +315,11 @@ paths:
                 check_in:
                   type: string
                   format: date
-                  example: '2024-09-17'
+                  example: '2024-09-24'
                 check_out:
                   type: string
                   format: date
-                  example: '2024-09-18'
+                  example: '2024-09-25'
               required:
               - check_in
               - check_out
@@ -458,6 +455,7 @@ paths:
                 image:
                   type: string
                   format: binary
+                  example: ''
               required:
               - number
               - capacity
@@ -608,24 +606,15 @@ paths:
           description: User created
           content:
             application/json:
-              schema:
-                type: object
-                properties:
-                  token:
-                    type: string
-                    example: "{token}"
-                  user:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                        example: 31
-                      username:
-                        type: string
-                        example: test2
-                      role:
-                        type: string
-                        example: user
+              examples:
+                success_example:
+                  value:
+                    token: "{token}"
+                    user:
+                      username: test
+                      full_name: Harry Kane
+                      preferences: Gym, Pool
+                      image_url: "/path/to/image.png"
         '422':
           description: Invalid request
           content:
@@ -652,13 +641,25 @@ paths:
                     password_confirmation:
                       type: string
                       example: password
+                    first_name:
+                      type: string
+                      example: Harry
+                    last_name:
+                      type: string
+                      example: Kane
+                    preferences:
+                      type: text
+                      example: Gym
                     role:
                       type: integer
                       example: 0
+                    image:
+                      type: string
+                      format: binary
+                      example: ''
                   required:
                   - username
                   - password
-                  - password_confirmation
 servers:
 - url: http://127.0.0.1:3000/
   variables:
